--- a/NN_learned/check.ipynb
+++ b/NN_learned/check.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "54ba9099-ea0f-4ea2-993c-e5b6a7628324",
    "metadata": {},
    "outputs": [],
@@ -36,6 +36,10 @@
     "    ax.tick_params(axis='y')\n",
     "\n",
     "pltNormal()\n",
+    "x=np.arange(10,100)\n",
+    "fig, axs = plt.subplots(1,1,figsize=(6,5))\n",
+    "axNormal(axs)\n",
+    "\n",
     "\n",
     "calculator=TiO2NN.TiO2()"
    ]
@@ -146,12 +150,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "cb4da37f-514d-4120-8633-269e402a9247",
    "metadata": {},
    "outputs": [],
    "source": [
-    "T=1000\n",
+    "T=300\n",
     "x=np.arange(1,10,0.01)\n",
     "MD=np.zeros(0)\n",
     "NN=np.zeros(0)\n",
@@ -179,7 +183,39 @@
     "X=N*np.sum(MD2)-(np.sum(MD))**2\n",
     "Y=N*np.sum(NN2)-(np.sum(NN))**2\n",
     "R2=(N*np.sum(MDNN)-np.sum(MD)*np.sum(NN))/(X**0.5*Y**0.5)\n",
-    "MSE=np.sum((MD-NN)**2)/N"
+    "MSE=np.sum((MD-NN)**2)/N\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "894e53a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.717948717948718\n",
+      "0.9743589743589743\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "fallIn=0\n",
+    "for i in MD/NN/0.95:\n",
+    "    if(i>0.8 and i<1/0.8):\n",
+    "        fallIn+=1\n",
+    "    \n",
+    "print(float(fallIn/N))\n",
+    "\n",
+    "fallIn=0\n",
+    "for i in MD/NN/0.95:\n",
+    "    if(i>0.65 and i<1/0.65):\n",
+    "        fallIn+=1\n",
+    "    \n",
+    "print(float(fallIn/N))"
    ]
   },
   {
@@ -516,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
   },
   "vscode": {
    "interpreter": {
